# agent-serving-performance-study

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: experiments.json
scripts/: run_bfcl_instrumented.py  select_bfcl_subset.py  server_setup.sh
src/agent_serving_study/: __init__.py  cli.py  config.py  orchestrator.py  prometheus.py  summary.py
tests/: test_core.py
